testsuite/tests/parser/should_fail/NoBlockArgumentsFail.stderr

NoBlockArgumentsFail.hs:6:17: error:
    Unexpected do block in function application:
        do return ()
    Suggested fixes:
      You could write it with parentheses
      Perhaps you intended to use BlockArguments
